<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context="com.fabiotp.singlescreenapp.MainActivity">

    <!-- Top Image -->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/top_image"
        android:src="@drawable/topimage" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/logo_image"
        android:src="@drawable/logo" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Business Information -->
        <ImageView
            android:id="@+id/logoinfo"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="false"
            android:contentDescription="@string/logo_info"
            android:cropToPadding="false"
            android:src="@drawable/infoicon" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="72dp"
            android:layout_marginStart="72dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/logoinfo"
            android:layout_toRightOf="@id/logoinfo"
            android:text="@string/photography_studio"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

        <!-- Business Phone -->
        <ImageView
            android:id="@+id/logophone"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_below="@id/logoinfo"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="false"
            android:contentDescription="@string/logo_phone"
            android:cropToPadding="false"
            android:src="@drawable/phoneicon" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logoinfo"
            android:layout_gravity="center"
            android:layout_marginLeft="72dp"
            android:layout_marginStart="72dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/logophone"
            android:layout_toRightOf="@id/logophone"
            android:text="@string/phonenumber"
            android:textColor="@color/colorAccent" />

        <!-- Business Address -->
        <ImageView
            android:id="@+id/logoadress"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_below="@id/logophone"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/logo_adress"
            android:cropToPadding="false"
            android:src="@drawable/adressicon" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logophone"
            android:layout_gravity="center"
            android:layout_marginLeft="72dp"
            android:layout_marginStart="72dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/logoadress"
            android:layout_toRightOf="@id/logoadress"
            android:text="@string/adresslocation"
            android:textColor="@color/colorAccent" />

        <!-- Business Facebook-->
        <ImageView
            android:id="@+id/logoface"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_below="@id/logoadress"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/logo_face"
            android:cropToPadding="false"
            android:src="@drawable/facebookicon" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logoadress"
            android:layout_gravity="center"
            android:layout_marginLeft="72dp"
            android:layout_marginStart="72dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/logoface"
            android:layout_toRightOf="@id/logoface"
            android:text="@string/imagina_f"
            android:textColor="@color/colorAccent" />

        <!-- Business Opening Hours -->
        <ImageView
            android:id="@+id/logohours"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_below="@id/logoface"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/logo_hours"
            android:cropToPadding="false"
            android:src="@drawable/hoursicon" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logoface"
            android:layout_gravity="center"
            android:layout_marginLeft="72dp"
            android:layout_marginStart="72dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/logohours"
            android:layout_toRightOf="@id/logohours"
            android:text="@string/hours_of_operation"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logohours"
            android:layout_gravity="center"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/text_monTofri"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logohours"
            android:layout_gravity="center"
            android:layout_marginLeft="36dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@id/textView7"
            android:layout_toRightOf="@id/textView7"
            android:text="@string/hoursMonToFri"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView7"
            android:layout_gravity="center"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="14dp"
            android:text="@string/text_saturday"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView7"
            android:layout_gravity="center"
            android:layout_marginLeft="44dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="14dp"
            android:layout_toEndOf="@id/textView8"
            android:layout_toRightOf="@id/textView8"
            android:text="@string/text_saturdayHours"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView8"
            android:layout_gravity="center"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="14dp"
            android:text="@string/text_sunday"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView8"
            android:layout_gravity="center"
            android:layout_marginLeft="54dp"
            android:layout_marginStart="54dp"
            android:layout_marginTop="14dp"
            android:layout_toEndOf="@id/textView9"
            android:layout_toRightOf="@id/textView9"
            android:text="@string/text_sundayHours"
            android:textColor="@color/colorAccent" />

    </RelativeLayout>

</android.support.v7.widget.LinearLayoutCompat>
